[Fix] 롤백 테스트 DB 환경 의존성 제거 (#302)